Update title of storing version step

--- a/.github/workflows/pack.yml
+++ b/.github/workflows/pack.yml
@@ -27,7 +27,7 @@ jobs:
         shell: bash
         run: git show-ref --tags --verify --quiet -- "refs/tags/v${{ steps.package.outputs.version }}" && exit 1
 
-      - name: 'Finishing'
+      - name: 'Storing Version'
         id: 'finished'
         run: echo "::set-output name=version::${{ steps.package.outputs.version }}"
 
